--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/PokemonListFragment"
-        android:name="com.example.tdprog.presentation.list.PokemonListFragment"
+        android:name="com.example.tdprog.presentation.presentation.list.PokemonListFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_pokemon_list">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/PokemonDetailFragment"
-        android:name="com.example.tdprog.presentation.list.detail.PokemonDetailFragment"
+        android:name="com.example.tdprog.presentation.presentation.detail.PokemonDetailFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_pokemon_detail">
 
