--- a/app/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/app/src/main/res/layout/fragment_pokemon_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.list.detail.PokemonDetailFragment">
+    tools:context=".presentation.presentation.detail.PokemonDetailFragment">
 
     <TextView
         android:id="@+id/pokemon_detail_name"
